# star_wars_podracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/environment/: .gitattributes  minimap.mtl  mos_espa.mtl  mos_espa_ground.mtl  mos_espa_lap_count.mtl  red_dot.mtl
assets/platform/: platform.mtl
assets/podracers/: air_scoops_left3.mtl  air_scoops_left_hinge2.mtl  cable_right.mtl  chariot.mtl  chariot2.mtl  direction_left.mtl  direction_right.mtl  reactor_left.mtl  rotor_right.mtl
assets/textures/.mayaSwatches/: rust.jpg_hcm.swatch
include/: audio.hpp  color.hpp  game.hpp  joint.hpp  mesh.hpp  object.hpp  power.hpp  shader.hpp  skybox.hpp  smoke.hpp
shaders/BoundingBox/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/color_pass/: fragment.glsl  vertex.glsl
shaders/countdown/: fragment.glsl  geometry.glsl
shaders/env/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/env/skybox/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/final_pass/: fragment.glsl
shaders/gaussian_blur/: fragment.glsl
shaders/greyscale/: fragment.glsl  geometry.glsl
shaders/legacy/: fragment.glsl  vertex.glsl
shaders/menu/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/minimap/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/motion_blur/: fragment.glsl  fragment_save.glsl
shaders/podracer/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/power/: fragment.glsl  geometry.glsl  vertex.glsl
shaders/shadows/: fragment.glsl
shaders/smoke/: fragment.glsl  geometry.glsl  vertex.glsl
src/: .game.cpp.swp  animation.cpp  audio.cpp  color.cpp  game.cpp  joint.cpp  main.cpp  mesh.cpp  object.cpp  power.cpp  shader.cpp  skybox.cpp  smoke.cpp
